--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "vue": "^3.2.36",
     "vue-router": "^4.0.15",
     "webpack-manifest-plugin": "^5.0.0",
-    "webpack-node-externals": "^3.0.0",
-    "vite": "^2.9.9"
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@vitejs/plugin-vue": "^2.3.3",
+    "vite": "^2.9.9",
     "vue-cli-plugin-tailwind": "~3.0.0"
   }
 }
