--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "vite build",
     "dev": "vite",
     "preview": "vite preview --port 4173",
-    "start": "concurrently --kill-others \"nodemon ./src/server.js\" \"npm run dev\""
+    "start": "concurrently --kill-others \"nodemon ./src/server.js\" \"npm run dev\"",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
